dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/fcgi.c)
AC_PREREQ([2.50])
AC_CONFIG_HEADER(src/config.h)

AC_SUBST(CC)
AC_SUBST(SWI_CFLAGS)
AC_SUBST(SWI_LIBS)
AC_SUBST(SWI_BASE)
AC_SUBST(SWI_ARCH)
AC_SUBST(SWI_SOLIBDIR)
AC_SUBST(SWI_PLLIBDIR)

AC_PROG_INSTALL
AC_PROG_CC([])

AC_CHECK_SIZEOF(long)

PKG_CHECK_MODULES(SWI,
    swipl
)

AC_CHECK_LIB(fcgi, main)
if test "$ac_cv_lib_fcgi_main" != "yes"; then
    AC_MSG_ERROR([unable to find the fcgi library])
fi

AC_CHECK_HEADER(fcgiapp.h)
if test "$ac_cv_header_fcgiapp_h" != "yes"; then
    AC_MSG_ERROR([unable to find the fcgiapp.h header])
fi

AC_OUTPUT(Makefile src/Makefile)
